--- a/res/raw/changelog.txt
+++ b/res/raw/changelog.txt
@@ -24,11 +24,25 @@
   </head>
 
   <body>
+$ 35
+  %3.0-beta5
+  _ unreleased
+    * Fixed layout on non-Honeycomb tablets
+    * Better handling of fragments on tablets
+    * Compatibility for Donut restored
+    * Fixed bug that caused unpredictable results when an app is remembered that was previously allowed
+    * <span class="elite">*</span> Backup/restore of apps and preferences
+    * Fix for Superuser thinking the binary is outdated when it's not
+    * Major speed increase for notifications and logging
+    * Show seconds in log defaults to off now
+    * Fix FC when trying to swipe left/right in HomeActivity
+    * Fix changelog version tracking, only show what's changed since the last time the changelog was displayed on launch
+    
 $ 34
   % 3.0-beta4
   _ 2011-08-21
     * New layout for home activity with app list and log in the same place
-    * <span class="elite">*</span>Basic backup/restore capability for apps (will be expanded later)
+    * <span class="elite">*</span> Basic backup/restore capability for apps (will be expanded later)
     * Fix a FC in the LogService
     * Updated translations from crowdin.net, see <a href="http://androidsu.com/3-0-beta/translators">the translators page</a> for details
     * Change the Changelog dialog so that Elite only features are more obvious
@@ -36,13 +50,13 @@ $ 34
 $ 33
   % 3.0 beta3
   _ 2011-08-02
-    * <span class="elite">*</span>New PIN activity for setting/changing/checking PIN
-    * <span class="elite">*</span>New NFC tag writer activity
-    * <span class="elite">*</span>Check PIN when toggling an app's permission if PIN is enabled
+    * <span class="elite">*</span> New PIN activity for setting/changing/checking PIN
+    * <span class="elite">*</span> New NFC tag writer activity
+    * <span class="elite">*</span> Check PIN when toggling an app's permission if PIN is enabled
     * Let the binary updater fail to remount /system as read-only, and alert the user about it
     * When updating the su binary, put the new one in the same place as the old, if possible
     * Fix for apps being removed from the allow list when they're updated
-    * <span class="elite">*</span>Use the PIN activity for setting the code for Ghost mode
+    * <span class="elite">*</span> Use the PIN activity for setting the code for Ghost mode
     * Changelog dialog thanks to <a href="https://code.google.com/p/android-change-log/">Karsten Priegnitz</a>
     
 $ 32
@@ -50,9 +64,9 @@ $ 32
   _ 2011-06-26
     * Fixed Honeycomb prompt
     * Fixed Superuser3 being deleted on reboot on some ROMS
-    * <span class="elite">*</span>Keep Superuser out of Recent Apps when Ghost mode is enabled
+    * <span class="elite">*</span> Keep Superuser out of Recent Apps when Ghost mode is enabled
     * Automatic malicious app scanner
-    * <span class="elite">*</span>Star button in title bar now points to Elite's Featured Apps
+    * <span class="elite">*</span> Star button in title bar now points to Elite's Featured Apps
     * Better handling of database to reduce FCs
     * Fixed bug causing some apps to not display right
     * Fixed bug causing some apps to prompt again even if they're already remembered
