--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -22,7 +22,7 @@
   <string name="recent_activity">Actividad reciente</string>
   <string name="yes">Sí</string>
   <string name="no">No</string>
-  <string name="ok">Okay</string>
+  <string name="ok">Aceptar</string>
   <string name="allow">Permitir</string>
   <string name="cancel">Cancelar</string>
   <string name="deny">Denegar</string>
@@ -106,11 +106,11 @@
   <string name="pref_toast_location_title">Posición del Toast</string>
   <string name="pref_toast_location_summary">Donde aparecerá la notificación en la pantalla</string>
   <string name="pref_category_nfc_title">NFC</string>
-  <string name="pref_use_allow_tag_title">Use NFC tag to allow</string>
-  <string name="pref_use_allow_tag_summary_on">Enter PIN or scan tag to allow</string>
-  <string name="pref_use_allow_tag_summary_off">Enter PIN only to allow</string>
-  <string name="pref_write_allow_tag_title">Write new allow tag</string>
-  <string name="pref_write_allow_tag_summary">Write a new tag to be used to allow</string>
+  <string name="pref_use_allow_tag_title">Usar etiqueta NFC para permitir</string>
+  <string name="pref_use_allow_tag_summary_on">Introducir PIN o escanear etiqueta para permitir</string>
+  <string name="pref_use_allow_tag_summary_off">Introducir PIN sólo para permitir</string>
+  <string name="pref_write_allow_tag_title">Escriba nueva etiqueta para permitir</string>
+  <string name="pref_write_allow_tag_summary">Escriba una nueva etiqueta que se utilizará para permitir</string>
   <string name="pref_category_info_title">Información del Superusuario</string>
   <string name="pref_version_title">Superusuario v%1$s (%2$d)</string>
   <string name="pref_version_summary">Versión de la base de datos %s</string>
@@ -128,7 +128,7 @@
   <string name="updater_update_anyway">Actualizar de todos modos</string>
   <string name="updater_cool">Eso ha estado genial, hazlo de nuevo</string>
   <string name="updater_working">Trabajando...</string>
-  <string name="updater_ok">okay!</string>
+  <string name="updater_ok">Aceptar</string>
   <string name="updater_fail">Error</string>
   <string name="updater_update_failed">Error al actualizar. ¿Reintentar?</string>
   <string name="updater_try_again">Reintentar</string>
@@ -140,18 +140,18 @@
   <string name="updater_step_fix_db">Fijación de la base de datos...\u0020</string>
   <string name="updater_step_download_busybox">Descargar busybox personalizado...\u0020 </string>
   <string name="updater_step_check_md5sum">Comprobando md5sum...\u0020</string>
-  <string name="updater_step_check_installed_path">Checking current install path...\u0020</string>
+  <string name="updater_step_check_installed_path">Comprobando ruta de instalación actual...\u0020</string>
   <string name="updater_step_download_su">Descargando nuevo binario...\u0020</string>
   <string name="updater_step_get_root">Obteniendo acceso de root...\u0020</string>
   <string name="updater_step_remount_rw">Montar de nuevo el sistema como rw...\u0020</string>
   <string name="updater_step_cp">Copiando su al sistema...\u0020</string>
   <string name="updater_step_chmod">Cambiando el modo de archivo del su a 06755...\u0020</string>
-  <string name="updater_step_mv">Moving su to it\'s final location...\u0020</string>
+  <string name="updater_step_mv">Moviendo "su" a ubicación final...\u0020</string>
   <string name="updater_step_remount_ro">Montar de nuevo el sistema como ro...\u0020</string>
   <string name="updater_step_clean_up">Limpiando...\u0020</string>
-  <string name="updater_remount_ro_failed">Failed to remount the system as read-only, please reboot to finish the update</string>
-  <string name="updater_find_su_failed">Failed to find currently installed su binary. Update cannot continue</string>
-  <string name="updater_bad_install_location">su binary is currently installed in /sbin. This updater is not capable of updating it. Please find a new ROM for your device.</string>
+  <string name="updater_remount_ro_failed">No se pudo montar /system en modo solo-lectura, reinicie el sistema para completar la actualización </string>
+  <string name="updater_find_su_failed">El binario "su" no se ha podido encontrar. La actualización no pudo continuar.</string>
+  <string name="updater_bad_install_location">El binario "su" está instalado en /sbin y el actualizador no puede actualizarlo. Busque otra ROM para su dispositivo.</string>
   <string name="notification_text_allow">%s ha concedido permisos de Superusuario</string>
   <string name="notification_text_deny">%s no ha concedido permisos de Superusuario</string>
   <string name="notif_outdated_ticker">El su binario está desactualizado</string>
@@ -161,7 +161,7 @@
   <string name="pin_new_pin">Introducir el nuevo PIN</string>
   <string name="pin_confirm_pin">Confirmar PIN</string>
   <string name="pin_mismatch">Los PINs no coinciden, vuelva a intentarlo</string>
-  <string name="pin_enter_secret_code">Enter secret code</string>
+  <string name="pin_enter_secret_code">Escriba el código secreto</string>
   <string name="nfc_write_tag">Scan tag to write</string>
   <string name="malicious_apps_title">Atención</string>
   <string name="malicious_apps_message2">Las Apps han sido calificadas como maliciosas porque contienen elementos que indican que están intentando conceder acceso de root, posiblemente sin consentimiento. Se recomienda desinstalarlas inmediatamente.</string>
@@ -169,11 +169,11 @@
   <string name="malicious_apps_ignore">Ignorar</string>
   <string name="malicious_app_notification_ticker">Se ha detectado una app potencialmente maliciosa</string>
   <string name="malicious_app_notification_text">%s es probablemente malicioso. Pulse para desinstalar.</string>
-  <string name="malicious_app_uid">shares UID with Superuser</string>
+  <string name="malicious_app_uid">Compartir UID con Superusuario</string>
   <string name="malicious_app_respond">requests respond permission</string>
-  <string name="malicious_app_write">requests permission to write to permissions provider</string>
+  <string name="malicious_app_write">Solicita permiso para escribir en proveedor de permisos</string>
   <string name="changelog_full_title">Changelog</string>
-  <string name="changelog_title">What\'s New</string>
+  <string name="changelog_title">Novedades</string>
   <plurals name="pref_logs_deleted">
     <item quantity="one">Un registro eliminado</item>
     <item quantity="other">%1$d registros eliminados</item>
