--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -22,7 +22,7 @@
   <string name="recent_activity">Actividade recente</string>
   <string name="yes">Sim</string>
   <string name="no">Não</string>
-  <string name="ok">Okay</string>
+  <string name="ok">Ok</string>
   <string name="allow">Permitir</string>
   <string name="cancel">Cancelar</string>
   <string name="deny">Negar</string>
@@ -40,9 +40,9 @@
   <string name="log_count">A mostrar %d entradas</string>
   <string name="log_last_accessed">Ultimo acesso foi %1$s ás %2$s</string>
   <string name="log_last_allowed">Ultima permição foi %1$s as %2$s</string>
-  <string name="log_last_denied">Last denied on %1$s at %2$s</string>
-  <string name="log_last_toggled">Last toggled on %1$s at %2$s</string>
-  <string name="log_created_on">Created on %1$s at %2$s</string>
+  <string name="log_last_denied">Negado pela última vez a %1$s às %2$s</string>
+  <string name="log_last_toggled">Alternado pela última vez a %1$s às %2$s</string>
+  <string name="log_created_on">Criado a %1$s às %2$s</string>
   <string name="detail_package">Pacote:</string>
   <string name="detail_app_uid">UID da App:</string>
   <string name="detail_request">UID requesitado:</string>
@@ -73,9 +73,9 @@
   <string name="pref_show_status_icons_summary_off">Não mostrar status icone para cada aplicação</string>
   <string name="pref_status_icon_type_title">Tipo de status icone</string>
   <string name="pref_status_icon_type_summary">Estilo de status icone a ser apresentado</string>
-  <string name="pref_applist_show_log_data_title">Show log data</string>
-  <string name="pref_applist_show_log_data_summary_on">Show log data in App list</string>
-  <string name="pref_applist_show_log_data_summary_off">Do not show log data in app list</string>
+  <string name="pref_applist_show_log_data_title">Mostrar entradas do registo</string>
+  <string name="pref_applist_show_log_data_summary_on">Mostrar dados de registo na lista de App\'s</string>
+  <string name="pref_applist_show_log_data_summary_off">Não mostrar dados de registo na lista de App\'s</string>
   <string name="pref_category_log_title">Registo</string>
   <string name="pref_enable_logging_title">Activar registos</string>
   <string name="pref_enable_logging_summary_on">A criação de acessos e permissões será registada</string>
@@ -103,12 +103,12 @@
   <string name="pref_notifications_summary_off">não mostrar notificação quando a permissão recebe permissões Su</string>
   <string name="pref_notifications_type_title">Tipo de notificação</string>
   <string name="pref_notifications_type_summary">Tipo de notificação a ser mostrada quando a app recebe privilégios de su</string>
-  <string name="pref_toast_location_title">Toast location</string>
+  <string name="pref_toast_location_title">Local dos popups</string>
   <string name="pref_toast_location_summary">Onde é que a notificação vai aparecer no ecrã </string>
   <string name="pref_category_nfc_title">NFC</string>
   <string name="pref_use_allow_tag_title">Use NFC tag to allow</string>
   <string name="pref_use_allow_tag_summary_on">Enter PIN or scan tag to allow</string>
-  <string name="pref_use_allow_tag_summary_off">Enter PIN only to allow</string>
+  <string name="pref_use_allow_tag_summary_off">Introduzir o PIN para apenas permitir</string>
   <string name="pref_write_allow_tag_title">Write new allow tag</string>
   <string name="pref_write_allow_tag_summary">Write a new tag to be used to allow</string>
   <string name="pref_category_info_title">Informação SuperUser</string>
@@ -119,7 +119,7 @@
   <string name="pref_bin_version_summary">Pressione para verificar actualizações</string>
   <string name="pref_changelog_title">Changelog</string>
   <string name="pref_changelog_summary">Mostrar changelog</string>
-  <string name="pref_get_elite_title">Go Elite!</string>
+  <string name="pref_get_elite_title">Use a versão Elite!</string>
   <string name="pref_get_elite_summary">Comprar versão Elite para desbloquear todas as opções</string>
   <string name="updater_title">Actualizador do Binary</string>
   <string name="updater_new_su_found">Nova versão do binário SU encontrada. Actualizar agora?</string>
@@ -128,7 +128,7 @@
   <string name="updater_update_anyway">Actualizar na mesma</string>
   <string name="updater_cool">Isso foi fixe, faz isso outra vez</string>
   <string name="updater_working">A trabalhar...</string>
-  <string name="updater_ok">okay!</string>
+  <string name="updater_ok">Ok!</string>
   <string name="updater_fail">Falhou!</string>
   <string name="updater_update_failed">Actualização falhou. Tentar novamente?</string>
   <string name="updater_try_again">Tentar novamente</string>
@@ -140,18 +140,18 @@
   <string name="updater_step_fix_db">A corrigir a base de dados...\u0020</string>
   <string name="updater_step_download_busybox">A fazer download do custom busybox...\u0020</string>
   <string name="updater_step_check_md5sum">A verificaar md5sum...\u0020</string>
-  <string name="updater_step_check_installed_path">Checking current install path...\u0020</string>
+  <string name="updater_step_check_installed_path">A verificar o caminho actual de instalação...\u0020</string>
   <string name="updater_step_download_su">A fazer download do novo binário...\u0020</string>
   <string name="updater_step_get_root">A adquirir acesso root ...\u0020</string>
-  <string name="updater_step_remount_rw">Remounting /system as rw...\u0020</string>
+  <string name="updater_step_remount_rw">A remontar /system como leitura/escrita...\u0020</string>
   <string name="updater_step_cp">A copiar su para /system...\u0020</string>
   <string name="updater_step_chmod">A mudar o modo do ficheiro Su para 06755...\u0020</string>
-  <string name="updater_step_mv">Moving su to it\'s final location...\u0020</string>
+  <string name="updater_step_mv">A mover su para a localização final...\u0020</string>
   <string name="updater_step_remount_ro">A re-montar /system como ro...\u0020</string>
   <string name="updater_step_clean_up">Efectuando uma limpeza...\u0020</string>
-  <string name="updater_remount_ro_failed">Failed to remount the system as read-only, please reboot to finish the update</string>
-  <string name="updater_find_su_failed">Failed to find currently installed su binary. Update cannot continue</string>
-  <string name="updater_bad_install_location">su binary is currently installed in /sbin. This updater is not capable of updating it. Please find a new ROM for your device.</string>
+  <string name="updater_remount_ro_failed">Não foi possível remontar o sistema como leitura, por favor reinicie para concluir a actualização</string>
+  <string name="updater_find_su_failed">Falha ao localizar o binário su actualmente instalado. A actualização não pode continuar</string>
+  <string name="updater_bad_install_location">o binário su está atualmente instalado em /sbin. Este actualizador não é capaz de atualizá-lo. Por favor, procure uma nova ROM para o seu equipamento.</string>
   <string name="notification_text_allow">%s foram dadas permissões de Superuser</string>
   <string name="notification_text_deny">%s foram negadas permissẽos de SuperUser</string>
   <string name="notif_outdated_ticker">O seu binário do su está desactualizado</string>
@@ -161,7 +161,7 @@
   <string name="pin_new_pin">Insira PIN novo</string>
   <string name="pin_confirm_pin">Confirme PIN</string>
   <string name="pin_mismatch">PIN\'s não são iguais,tente novamente</string>
-  <string name="pin_enter_secret_code">Enter secret code</string>
+  <string name="pin_enter_secret_code">Introduza o código secreto</string>
   <string name="nfc_write_tag">Scan tag to write</string>
   <string name="malicious_apps_title">Aviso</string>
   <string name="malicious_apps_message2">Apps foram marcadas como maliciosas visto que que contem elementos que indicam que estão a tentar ganhar acesso root , sem o seu concentimento.É recomendado que sejam desinstaladas imediatamente!</string>
@@ -169,11 +169,11 @@
   <string name="malicious_apps_ignore">Ignorar</string>
   <string name="malicious_app_notification_ticker">Aplicação potencialmente maliciosa detectada</string>
   <string name="malicious_app_notification_text">%s poderá ser maliciosa.</string>
-  <string name="malicious_app_uid">shares UID with Superuser</string>
+  <string name="malicious_app_uid">partilha UID com Superuser</string>
   <string name="malicious_app_respond">requests respond permission</string>
   <string name="malicious_app_write">requests permission to write to permissions provider</string>
   <string name="changelog_full_title">Changelog</string>
-  <string name="changelog_title">What\'s New</string>
+  <string name="changelog_title">Novidades</string>
   <plurals name="pref_logs_deleted">
     <item quantity="one">Um registo apagado</item>
     <item quantity="other">%1$d Registos apagados</item>
