--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -10,7 +10,7 @@
   <string name="menu_extras">Extras</string>
   <string name="menu_preferences">Einstellungen</string>
   <string name="menu_clear">löschen</string>
-  <string name="menu_clear_log">Log löschen</string>
+  <string name="menu_clear_log">Protokoll löschen</string>
   <string name="permgrouplab_superuser">Superuser-Berechtigungen</string>
   <string name="permgroupdesc_superuser">Berechtigungen im Zusammenhang mit Superuser</string>
   <string name="permlab_respond">reagiere auf Superuser-Anfragen</string>
@@ -26,7 +26,7 @@
   <string name="allow">Erlauben</string>
   <string name="cancel">Abbrechen</string>
   <string name="deny">Verweigern</string>
-  <string name="set">Setzen</string>
+  <string name="set">Setze</string>
   <string name="remember">Merken</string>
   <string name="remember_disabled">Merken deaktiviert, bis su aktualisiert ist</string>
   <string name="request">%1$s als %2$s (uid: %3$d)</string>
@@ -44,7 +44,7 @@
   <string name="log_last_toggled">Zuletzt angewählt am %1$s um %2$s</string>
   <string name="log_created_on">Erstellt am %1$s um %2$s</string>
   <string name="detail_package">Paket</string>
-  <string name="detail_app_uid">App UID</string>
+  <string name="detail_app_uid">App-UID</string>
   <string name="detail_request">Angeforderte UID</string>
   <string name="detail_command">Befehl</string>
   <string name="detail_status">Status</string>
@@ -61,13 +61,9 @@
   <string name="pref_automatic_action_title">Automatische Antwort</string>
   <string name="pref_automatic_action_summary">Bestimme wie Superuser neue Anfragen verarbeitet</string>
   <string name="pref_ghost_mode_title">Ghost-Modus</string>
-  <string name="pref_ghost_mode_summary_on">Wähle den geheimen Code um Superuser zu starten</string>
+  <string name="pref_ghost_mode_summary_on">Wählen Sie den geheimen Code, um Superuser zu starten</string>
   <string name="pref_ghost_mode_summary_off">Ghost-Modus deaktiviert</string>
-  <string name="pref_ghost_mode_message">Der Ghost-Modus verbirgt das Superuser-Icon aus dem Launcher. Wenn der Launcher das nächste mal neu gestartet wird, wird das Superuser-Icon nicht mehr angezeigt. Sobald das Icon verborgen ist, können Sie Superuser starten, indem sie einen Geheim-Code im Ziffernblock eingeben. Der voreingestellte Geheim-Code ist *#*#787378737#*#* (*#*#superuser#*#*), Sie können die Zahlen innerhalb des Codes ändern. 
-
-Beachten sie, dass wenn ihr Gerät keinen Ziffernblock besitzt sollten sie den Ghost-Modus nicht aktivieren.
-
-Ghost-Modus aktivieren ?</string>
+  <string name="pref_ghost_mode_message">Der Ghost-Modus verbirgt das Superuser-Icon aus dem Launcher. Wenn der Launcher das nächste mal neu gestartet wird, wird das Superuser-Icon nicht mehr angezeigt. Sobald das Icon verborgen ist, können Sie Superuser starten, indem sie einen Geheim-Code im Ziffernblock eingeben. Der voreingestellte Geheim-Code ist *#*#787378737#*#* (*#*#superuser#*#*), Sie können die Zahlen innerhalb des Codes ändern.\n\nBeachten Sie, dass Sie den Ghost-Modus nicht aktivieren sollten, wenn ihr Gerät keinen Ziffernblock besitzt.\n\nGhost-Modus aktivieren?</string>
   <string name="pref_ghost_mode_enabled_message">Ghost-Modus aktiviert. Bitte starten Sie Ihren Launcher neu oder rebooten Ihr Telefon, um die Änderung zu sehen.</string>
   <string name="pref_secret_code_title">Geheimcode</string>
   <string name="pref_secret_code_summary">Der Geheimcode lautet *#*#%1$s#*#*</string>
@@ -81,40 +77,40 @@ Ghost-Modus aktivieren ?</string>
   <string name="pref_applist_show_log_data_summary_on">Zeige Log-Daten in der App-Liste</string>
   <string name="pref_applist_show_log_data_summary_off">Zeige die Log-Daten in der App-Liste nicht an</string>
   <string name="pref_category_log_title">Log</string>
-  <string name="pref_enable_logging_title">Aktiviere Logging</string>
+  <string name="pref_enable_logging_title">Aktiviere Protokoll</string>
   <string name="pref_enable_logging_summary_on">Berechtigungs-Erstellung und Zugriff wird protokolliert</string>
   <string name="pref_enable_logging_summary_off">Berechtigungs-Erstellung und Zugriff wird nicht protokolliert</string>
-  <string name="pref_delete_old_logs_title">Alte Log-Eintrage löschen</string>
-  <string name="pref_delete_old_logs_summary_on">Alte Log-Einträge löschen, wenn Limit erreicht ist</string>
-  <string name="pref_delete_old_logs_summary_off">Alte Log-Einträge nicht löschen, wenn der Grenzwert erreicht ist</string>
-  <string name="pref_log_entry_limit_title">Grenzwert für Log-Einträge</string>
+  <string name="pref_delete_old_logs_title">Alte Protokoll-Eintrage löschen</string>
+  <string name="pref_delete_old_logs_summary_on">Alte Protokoll-Einträge löschen, wenn Limit erreicht ist</string>
+  <string name="pref_delete_old_logs_summary_off">Alte Protokoll-Einträge nicht löschen, wenn der Grenzwert erreicht ist</string>
+  <string name="pref_log_entry_limit_title">Grenzwert für Protokoll-Einträge</string>
   <string name="pref_log_entry_limit_summary">%1$d Log-Einträge</string>
-  <string name="pref_log_entries_to_save">Legen Sie die Anzahl der zu speichernden Log-Einträge fest</string>
+  <string name="pref_log_entries_to_save">Legen Sie die Anzahl der zu speichernden Protokoll-Einträge fest</string>
   <string name="pref_24_hour_title">Benutze 24h-Format</string>
-  <string name="pref_24_hour_summary_on">Log-Zeiten werden im 24-Stunden-Format angezeigt</string>
-  <string name="pref_24_hour_summary_off">Log-Zeiten werden im 12-Stunden-Format angezeigt</string>
+  <string name="pref_24_hour_summary_on">Protokoll-Zeiten werden im 24-Stunden-Format angezeigt</string>
+  <string name="pref_24_hour_summary_off">Protokoll-Zeiten werden im 12-Stunden-Format angezeigt</string>
   <string name="pref_show_seconds_title">Sekunden anzeigen</string>
-  <string name="pref_show_seconds_summary_on">Log-Zeiten werden Sekunden enthalten</string>
-  <string name="pref_show_seconds_summary_off">Log-Zeiten werden keine Sekunden enthalten</string>
+  <string name="pref_show_seconds_summary_on">Protokoll-Zeiten werden Sekunden enthalten</string>
+  <string name="pref_show_seconds_summary_off">Protokoll-Zeiten werden keine Sekunden enthalten</string>
   <string name="pref_date_format_title">Wählen Sie ein Datumsformat</string>
   <string name="pref_date_format_summary">Dieses Format wird verwendet um das Datum in allen Protokollen anzuzeigen</string>
-  <string name="pref_clear_log_title">Log leeren</string>
-  <string name="pref_clearing_log_title">Log wird geleert</string>
+  <string name="pref_clear_log_title">Protokoll löschen</string>
+  <string name="pref_clearing_log_title">Protokoll wird gelöscht</string>
   <string name="pref_clearing_log_summary">Bitte warten</string>
   <string name="pref_category_notification_title">Benachrichtigungen</string>
   <string name="pref_notifications_title">Benachrichtigungen</string>
   <string name="pref_notifications_summary_on">Zeige Benachrichtigung, wenn einer App su-Rechte gewährt wurden</string>
-  <string name="pref_notifications_summary_off">Keine Benachrichtigung anzeigen wenn einer Anwendung Su-Rechte erteilt werden</string>
+  <string name="pref_notifications_summary_off">Keine Benachrichtigung anzeigen wenn einer Anwendung su-Rechte erteilt werden</string>
   <string name="pref_notifications_type_title">Benachrichtigungstyp</string>
-  <string name="pref_notifications_type_summary">Art der Benachrichtigung, wenn einer Anwendung SU-Berechtigungen erteilt werden</string>
+  <string name="pref_notifications_type_summary">Art der Benachrichtigung, wenn einer Anwendung su-Berechtigungen erteilt werden</string>
   <string name="pref_toast_location_title">Lage des Hinweises</string>
   <string name="pref_toast_location_summary">Wo die Benachrichtigung auf dem Bildschirm angezeigt wird</string>
   <string name="pref_category_nfc_title">NFC</string>
-  <string name="pref_use_allow_tag_title">Zum erlauben NFC-Etikett scannen</string>
-  <string name="pref_use_allow_tag_summary_on">Zum erlauben PIN eingeben oder Etikett scannen</string>
-  <string name="pref_use_allow_tag_summary_off">Zum erlauben nur PIN eingeben</string>
+  <string name="pref_use_allow_tag_title">Für Erlaubnis NFC-Etikett scannen</string>
+  <string name="pref_use_allow_tag_summary_on">Für Erlaubnis PIN eingeben oder Etikett scannen</string>
+  <string name="pref_use_allow_tag_summary_off">Zum Erlauben nur PIN eingeben</string>
   <string name="pref_write_allow_tag_title">Beschreibe neues Erlaubnis-Etikett</string>
-  <string name="pref_write_allow_tag_summary">Erstelle ein Tag, das zum Erlauben verwendet wird</string>
+  <string name="pref_write_allow_tag_summary">Erstelle ein Etikett, das für Erlaubnis verwendet wird</string>
   <string name="pref_category_info_title">Superuser-Information</string>
   <string name="pref_version_title">Superuser v%1$s (%2$d)</string>
   <string name="pref_version_summary">Datenbank-Version %s</string>
@@ -129,58 +125,58 @@ Ghost-Modus aktivieren ?</string>
   <string name="updater_new_su_found">Neue Version von su binary gefunden. Jetzt aktualisieren?</string>
   <string name="updater_current_installed">Aktuelle Version bereits installiert. Keine Aktion erforderlich.</string>
   <string name="updater_update">Aktualisierung</string>
-  <string name="updater_update_anyway">Trotzdem Aktualisieren</string>
+  <string name="updater_update_anyway">Trotzdem aktualisieren</string>
   <string name="updater_cool">Das war cool, mach es nochmal</string>
   <string name="updater_working">Wird bearbeitet...</string>
   <string name="updater_ok">okay!</string>
   <string name="updater_fail">Fehlgeschlagen!</string>
   <string name="updater_update_failed">Das Update ist fehlgeschlagen. Erneut versuchen?</string>
   <string name="updater_try_again">Erneut versuchen</string>
-  <string name="updater_su_updated">su-binary erfolgreich aktualisiert</string>
+  <string name="updater_su_updated">su-Binary erfolgreich aktualisiert</string>
   <string name="updater_step_download_manifest">Manifest wird heruntergeladen...\u0020</string>
-  <string name="updater_step_parse_manifest">Parsing manifest...\u0020</string>
+  <string name="updater_step_parse_manifest">Analysiere Manifest...\u0020</string>
   <string name="updater_step_latest_version">Neueste Version =\u0020</string>
   <string name="updater_step_check_installed_version">Überprüfe installierte Version =\u0020</string>
   <string name="updater_step_fix_db">Repariere Datenbank ...\u0020</string>
-  <string name="updater_step_download_busybox">Custom-busybox wird heruntergeladen...\u0020</string>
+  <string name="updater_step_download_busybox">Angepasste Busybox wird heruntergeladen...\u0020</string>
   <string name="updater_step_check_md5sum">md5sum wird überprüft... \u0020</string>
   <string name="updater_step_check_installed_path">Aktueller Installationspfad wird überprüft...\u0020</string>
   <string name="updater_step_download_su">Neue binary wird heruntergeladen...\u0020</string>
   <string name="updater_step_get_root">Erhalte root-Zugriff...\u0020</string>
   <string name="updater_step_remount_rw">Aktiviere Schreibzugriff auf /system...\u0020</string>
   <string name="updater_step_cp">Kopiere su nach /system...\u0020</string>
-  <string name="updater_step_chmod">Ändere su-Dateiattribute auf 06755...</string>
+  <string name="updater_step_chmod">Ändere su-Dateiattribute auf \u0020...</string>
   <string name="updater_step_mv">su wird zur endgültigen Ablage verschoben...\u0020</string>
   <string name="updater_step_remount_ro">Aktiviere Lesezugriff auf /system...\u0020</string>
   <string name="updater_step_clean_up">Aufräumen ... \ u0020</string>
   <string name="updater_remount_ro_failed">Aktivieren des Lesezugriffs fehlgeschlagen, bitte starten sie ihr Gerät neu um die Aktualisierung abzuschließen</string>
-  <string name="updater_find_su_failed">Finden der momentan installierten su-binary fehlgeschlagen. Aktualisierung kann nicht abgeschlossen werden.</string>
-  <string name="updater_bad_install_location">su-binary befindet ist derzeit unter /sbin installiert. Dieser Updater ist nicht in der Lage die su-binary zu aktualisieren. Bitte suchen Sie ein neues ROM für ihr Gerät.</string>
+  <string name="updater_find_su_failed">Finden der momentan installierten su-Binary fehlgeschlagen. Aktualisierung kann nicht abgeschlossen werden.</string>
+  <string name="updater_bad_install_location">su-Binary ist derzeit unter /sbin installiert. Dieser Updater ist nicht in der Lage, su-Binary zu aktualisieren. Bitte suchen Sie ein neues ROM für ihr Gerät.</string>
   <string name="notification_text_allow">%s wurden su-Rechte gewährt</string>
   <string name="notification_text_deny">%s wurden su-Rechte verweigert</string>
-  <string name="notif_outdated_ticker">Ihre su-binary ist veraltet</string>
-  <string name="notif_outdated_title">su-binary veraltet</string>
+  <string name="notif_outdated_ticker">Ihre su-Binary ist veraltet</string>
+  <string name="notif_outdated_title">su-Binary veraltet</string>
   <string name="notif_outdated_text">Drücken, um su binary zu aktualisieren</string>
   <string name="pin_enter_pin">PIN eingeben</string>
-  <string name="pin_new_pin">Neuen PIN eingeben</string>
+  <string name="pin_new_pin">Neue PIN eingeben</string>
   <string name="pin_confirm_pin">PIN bestätigen</string>
   <string name="pin_mismatch">PINs stimmen nicht überein, versuchen Sie es erneut</string>
   <string name="pin_enter_secret_code">Geben Sie den Geheim-Code ein</string>
-  <string name="nfc_write_tag">Zum schreiben bitte Etikett scannen</string>
+  <string name="nfc_write_tag">Zum Schreiben bitte Etikett scannen</string>
   <string name="malicious_apps_title">Warnung</string>
-  <string name="malicious_apps_message2">Apps sind als schädlich eingestuft, weil sie Elemente enthalten die darauf hinweisen dass sie, möglicherweise ohne Ihr Einverständnis, versuchen root-Zugriff zu erhalten. Es wird dringend empfohlen diese auf der Stelle zu deinstallieren.</string>
+  <string name="malicious_apps_message2">Apps sind als schädlich eingestuft, weil sie Elemente enthalten die darauf hinweisen dass sie, möglicherweise ohne Ihr Einverständnis versuchen, root-Zugriff zu erhalten. Es wird dringend empfohlen diese auf der Stelle zu deinstallieren.</string>
   <string name="malicious_apps_uninstall">Deinstallieren</string>
   <string name="malicious_apps_ignore">Ignorieren</string>
   <string name="malicious_app_notification_ticker">Potenziell schädliche App erkannt</string>
   <string name="malicious_app_notification_text">%s ist wahrscheinlich bösartig. Drücken, um zu deinstallieren.</string>
   <string name="malicious_app_uid">teilt UID mit Superuser</string>
-  <string name="malicious_app_respond">Erwarte Erlaubnis für die Anfrage</string>
-  <string name="malicious_app_write">erwarte Erlaubnis um Berechtigunsanbieter zu schreiben</string>
+  <string name="malicious_app_respond">erwartet Erlaubnis für die Anfrage</string>
+  <string name="malicious_app_write">erwartet Erlaubnis, um Berechtigunsanbieter zu schreiben</string>
   <string name="changelog_full_title">Changelog</string>
   <string name="changelog_title">Neue Funktionen</string>
   <plurals name="pref_logs_deleted">
-    <item quantity="one">Ein Log gelöscht</item>
-    <item quantity="other">%1$d Logs gelöscht</item>
+    <item quantity="one">Ein Protokoll gelöscht</item>
+    <item quantity="other">%1$d Protokolle gelöscht</item>
   </plurals>
   <plurals name="pin_incorrect_try">
     <item quantity="one">Letzte Chance</item>
