--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -14,50 +14,50 @@
   <string name="permgrouplab_superuser">スーパーユーザー権限</string>
   <string name="permgroupdesc_superuser">スーパーユーザーに関連する権限</string>
   <string name="permlab_respond">スーパーユーザーの要求に応答する</string>
-  <string name="permdesc_respond">アプリケーションがスーパーユーザーのアクセスの要求に応答することを許可する</string>
+  <string name="permdesc_respond">アプリがスーパーユーザーのアクセスの要求に応答することを許可する</string>
   <string name="permlab_provider_read">スーパーユーザーデータを読み込む</string>
-  <string name="permdesc_provider_read">アプリケーションがスーパーユーザーコンテンツプロバイダからのデータを読み込むことを許可する</string>
+  <string name="permdesc_provider_read">アプリがスーパーユーザーコンテンツプロバイダからのデータを読み込むことを許可する</string>
   <string name="permlab_provider_write">スーパーユーザーデータを書き込む</string>
-  <string name="permdesc_provider_write">アプリケーションがスーパーユーザーコンテンツプロバイダへデータを書き込むことを許可する</string>
+  <string name="permdesc_provider_write">アプリがスーパーユーザーコンテンツプロバイダへデータを書き込むことを許可する</string>
   <string name="recent_activity">最近の履歴</string>
   <string name="yes">はい</string>
   <string name="no">いいえ</string>
-  <string name="ok">ok</string>
+  <string name="ok">OK</string>
   <string name="allow">許可</string>
   <string name="cancel">キャンセル</string>
   <string name="deny">拒否</string>
   <string name="set">設定</string>
   <string name="remember">記憶</string>
-  <string name="remember_disabled">suコマンドが更新されるまで記憶を無効にする</string>
+  <string name="remember_disabled">SUコマンドが更新されるまで記憶を無効にする</string>
   <string name="request">%1$s as %2$s (uid:%3$d)</string>
   <string name="unknown">不明な名前です</string>
-  <string name="allowed">許可されました</string>
-  <string name="denied">拒否されました</string>
-  <string name="created">作成しました</string>
-  <string name="toggled">切り替えました</string>
+  <string name="allowed">許可</string>
+  <string name="denied">拒否</string>
+  <string name="created">作成</string>
+  <string name="toggled">切替</string>
   <string name="empty_apps">リストにアプリがありません</string>
   <string name="empty_logs">ログ情報がありません</string>
-  <string name="log_count">％d個のエントリを表示する</string>
-  <string name="log_last_accessed">最後にアクセスしたのは %1$s at %2$s です</string>
-  <string name="log_last_allowed">最後に許可したのは %1$s at %2$s です</string>
-  <string name="log_last_denied">最後に拒否したのは %1$s at %2$s です</string>
-  <string name="log_last_toggled">最後に切り替えたのは %1$s at %2$s です</string>
-  <string name="log_created_on">作成したのは %1$s at %2$s です</string>
+  <string name="log_count">%d個のエントリを表示しています</string>
+  <string name="log_last_accessed">最後のアクセスは%1$sの%2$sです</string>
+  <string name="log_last_allowed">最後の許可は%1$sの%2$sです</string>
+  <string name="log_last_denied">最後の拒否は%1$sの%2$sです</string>
+  <string name="log_last_toggled">最後の切替は%1$sの%2$sです</string>
+  <string name="log_created_on">作成は%1$sの%2$sです</string>
   <string name="detail_package">パッケージ</string>
-  <string name="detail_app_uid">アプリケーションUID</string>
+  <string name="detail_app_uid">アプリのUID</string>
   <string name="detail_request">要求されたUID</string>
   <string name="detail_command">コマンド</string>
   <string name="detail_status">ステータス</string>
-  <string name="request_message">次のアプリケーションがスーパーユーザーのアクセスを要求しています</string>
-  <string name="request_app_name">アプリケーション</string>
+  <string name="request_message">次のアプリがスーパーユーザーアクセスを要求しています:</string>
+  <string name="request_app_name">アプリ</string>
   <string name="pref_title">環境設定</string>
   <string name="pref_category_security">セキュリティ</string>
-  <string name="pref_pin_title">PINを使用してください</string>
-  <string name="pref_pin_summary_on">権限のプロンプトにはPINが必要です</string>
+  <string name="pref_pin_title">PINの使用</string>
+  <string name="pref_pin_summary_on">権限のプロンプトにPINを必要とします</string>
   <string name="pref_pin_summary_off">権限のプロンプトにPINを必要としません</string>
   <string name="pref_change_pin_title">PINを変更する</string>
   <string name="pref_timeout_title">アクセスのタイムアウト</string>
-  <string name="pref_timeout_summary">記憶されていないアプリは、プロンプトの後に%1$d秒アクセスを持ちます</string>
+  <string name="pref_timeout_summary">記憶されていないアプリは、プロンプトの後に%1$d秒間アクセスを持ちます</string>
   <string name="pref_automatic_action_title">自動応答</string>
   <string name="pref_automatic_action_summary">スーパーユーザーが新しい要求を処理する方法を設定します</string>
   <string name="pref_ghost_mode_title">ゴーストモード</string>
@@ -68,30 +68,30 @@
   <string name="pref_secret_code_title">シークレットコード</string>
   <string name="pref_secret_code_summary">シークレットコードは*#*#%1$s#*#*です</string>
   <string name="pref_category_applist_title">アプリ一覧</string>
-  <string name="pref_show_status_icons_title">ステータスアイコンを表示する</string>
-  <string name="pref_show_status_icons_summary_on">各アプリケーションの状態のアイコンを表示する</string>
-  <string name="pref_show_status_icons_summary_off">各アプリケーションの状態のアイコンを表示しない</string>
+  <string name="pref_show_status_icons_title">ステータスアイコンの表示</string>
+  <string name="pref_show_status_icons_summary_on">各アプリごとの状態を表すアイコンを表示します</string>
+  <string name="pref_show_status_icons_summary_off">各アプリごとの状態を表すアイコンを表示しません</string>
   <string name="pref_status_icon_type_title">ステータスアイコンの種類</string>
   <string name="pref_status_icon_type_summary">表示するステータスアイコンのスタイル</string>
   <string name="pref_applist_show_log_data_title">ログデータの表示</string>
-  <string name="pref_applist_show_log_data_summary_on">アプリケーションリストにログデータを表示する</string>
-  <string name="pref_applist_show_log_data_summary_off">アプリケーションリストにログデータを表示しない</string>
+  <string name="pref_applist_show_log_data_summary_on">アプリのリストにログデータを表示します</string>
+  <string name="pref_applist_show_log_data_summary_off">アプリのリストにログデータを表示しません</string>
   <string name="pref_category_log_title">ログ</string>
-  <string name="pref_enable_logging_title">ログを有効にする</string>
+  <string name="pref_enable_logging_title">ログの有効化</string>
   <string name="pref_enable_logging_summary_on">権限の作成とアクセスが記録されます</string>
   <string name="pref_enable_logging_summary_off">権限の作成およびアクセスはログに記録されません</string>
-  <string name="pref_delete_old_logs_title">古いログを削除します</string>
-  <string name="pref_delete_old_logs_summary_on">制限に達したら古いログを削除します</string>
-  <string name="pref_delete_old_logs_summary_off">制限に達したときに古いログエントリを削除しないでください</string>
-  <string name="pref_log_entry_limit_title">ログの制限</string>
-  <string name="pref_log_entry_limit_summary">％1 $ d件のログがあります</string>
+  <string name="pref_delete_old_logs_title">古いログの削除</string>
+  <string name="pref_delete_old_logs_summary_on">制限値に達したら古いログを削除します</string>
+  <string name="pref_delete_old_logs_summary_off">制限値に達しても古いログエントリを削除しません</string>
+  <string name="pref_log_entry_limit_title">ログの制限値</string>
+  <string name="pref_log_entry_limit_summary">%1$d件のログがあります</string>
   <string name="pref_log_entries_to_save">保存するログの件数を設定します</string>
-  <string name="pref_24_hour_title">24時間形式を使用します</string>
-  <string name="pref_24_hour_summary_on">ログ時間を24時間形式で表示します</string>
-  <string name="pref_24_hour_summary_off">ログ時間を12時間形式で表示します</string>
-  <string name="pref_show_seconds_title">秒を表示します</string>
-  <string name="pref_show_seconds_summary_on">ログ時間に秒を含む</string>
-  <string name="pref_show_seconds_summary_off">ログ時間に秒は含まれません</string>
+  <string name="pref_24_hour_title">24時間表示の使用</string>
+  <string name="pref_24_hour_summary_on">ログの時間を24時間形式で表示します</string>
+  <string name="pref_24_hour_summary_off">ログの時間を12時間形式で表示します</string>
+  <string name="pref_show_seconds_title">秒の表示</string>
+  <string name="pref_show_seconds_summary_on">ログの時間表示に秒を含みます</string>
+  <string name="pref_show_seconds_summary_off">ログの時間表示に秒を含みません</string>
   <string name="pref_date_format_title">日付の表示形式を選択</string>
   <string name="pref_date_format_summary">すべてのログの日付表示に使用される形式</string>
   <string name="pref_clear_log_title">ログの消去</string>
@@ -99,8 +99,8 @@
   <string name="pref_clearing_log_summary">しばらくお待ちください</string>
   <string name="pref_category_notification_title">通知</string>
   <string name="pref_notifications_title">通知</string>
-  <string name="pref_notifications_summary_on">アプリがスーパーユーザー権限を取得したときに通知する</string>
-  <string name="pref_notifications_summary_off">アプリがスーパーユーザー権限を取得したときに通知しない</string>
+  <string name="pref_notifications_summary_on">アプリがSU権限を取得したときに通知します</string>
+  <string name="pref_notifications_summary_off">アプリがSU権限を取得しても通知しません</string>
   <string name="pref_notifications_type_title">通知の種類</string>
   <string name="pref_notifications_type_summary">アプリがSU権限を付与されたときに表示する通知のタイプ</string>
   <string name="pref_toast_location_title">トーストの場所</string>
@@ -113,22 +113,22 @@
   <string name="pref_write_allow_tag_summary">許可するために使用される新しいタグを書き込む</string>
   <string name="pref_category_info_title">スーパーユーザー情報</string>
   <string name="pref_version_title">スーパーユーザー v%1$s (%2$d)</string>
-  <string name="pref_version_summary">データベースバージョン％s</string>
-  <string name="pref_bin_version_title_loading">suコマンドのバイナリバージョンをロードしています</string>
-  <string name="pref_bin_version_title">Suコマンド v%s</string>
-  <string name="pref_bin_version_summary">タップして更新を確認する</string>
-  <string name="pref_changelog_title">変更履歴</string>
+  <string name="pref_version_summary">データベースバージョン %s</string>
+  <string name="pref_bin_version_title_loading">SUコマンドのバイナリバージョンをロードしています</string>
+  <string name="pref_bin_version_title">SUコマンド v%s</string>
+  <string name="pref_bin_version_summary">タップして更新を確認</string>
+  <string name="pref_changelog_title">更新履歴</string>
   <string name="pref_changelog_summary">更新履歴を表示する</string>
   <string name="pref_get_elite_title">Eliteを購入!</string>
   <string name="pref_get_elite_summary">すべてのオプションのロックを解除するEliteを購入</string>
   <string name="updater_title">バイナリアップデータ</string>
-  <string name="updater_new_su_found">suコマンドの新しいバージョンが見つかりました。今すぐアップデートしますか？</string>
-  <string name="updater_current_installed">既に最新バージョンがインストールされています。処置は必要ありません</string>
+  <string name="updater_new_su_found">SUコマンドの新しいバージョンが見つかりました。今すぐアップデートしますか？</string>
+  <string name="updater_current_installed">既に最新バージョンがインストールされています。更新は必要ありません</string>
   <string name="updater_update">アップデート</string>
   <string name="updater_update_anyway">とにかく更新</string>
-  <string name="updater_cool">クールだな、もう一回</string>
+  <string name="updater_cool">気に入った、もう一回</string>
   <string name="updater_working">処理中...</string>
-  <string name="updater_ok">ok!</string>
+  <string name="updater_ok">OK!</string>
   <string name="updater_fail">失敗しました！</string>
   <string name="updater_update_failed">アップデートに失敗しました。再試行しますか？</string>
   <string name="updater_try_again">再試行してください</string>
@@ -143,20 +143,20 @@
   <string name="updater_step_check_installed_path">現在のインストールパスをチェックしています...\u0020</string>
   <string name="updater_step_download_su">新しいバイナリをダウンロードしています...\u0020</string>
   <string name="updater_step_get_root">rootアクセス権を取得しています...\u0020</string>
-  <string name="updater_step_remount_rw">読み書き出来るように/Systemを再マウントしています...\u0020</string>
-  <string name="updater_step_cp">/systemにsuをコピーしています...\u0020</string>
-  <string name="updater_step_chmod">su​​のファイル権限を変更しています...\u0020</string>
-  <string name="updater_step_mv">suの移動に失敗しました...\u0020</string>
-  <string name="updater_step_remount_ro">/Systemを読み取り専用として再マウントしています...\u0020</string>
+  <string name="updater_step_remount_rw">読み書き出来るように/systemを再マウントしています...\u0020</string>
+  <string name="updater_step_cp">/systemにSUをコピーしています...\u0020</string>
+  <string name="updater_step_chmod">SU​​のファイル権限を変更しています...\u0020</string>
+  <string name="updater_step_mv">SUを最後の場所に移動しています...\u0020</string>
+  <string name="updater_step_remount_ro">/systemを読み取り専用として再マウントしています...\u0020</string>
   <string name="updater_step_clean_up">クリーニングしています...\u0020</string>
   <string name="updater_remount_ro_failed">読み取り専用としてシステムを再マウントしようとして失敗しました。アップデートを完了するために再起動してください</string>
-  <string name="updater_find_su_failed">現在インストールされているsuコマンドバイナリを見つけることができませんでした。アップデートを続行することはできません</string>
-  <string name="updater_bad_install_location">suコマンドのバイナリは、現在、/sbinにインストールされています。このアップデータは、それを更新できるわけではありません。お使いのデバイス用の新しいROMを見つけてください</string>
-  <string name="notification_text_allow">％sがスーパーユーザー権限を取得しました</string>
-  <string name="notification_text_deny">％sがスーパーユーザー権限の取得に失敗しました</string>
-  <string name="notif_outdated_ticker">お使いのsuバイナリが古いです</string>
-  <string name="notif_outdated_title">suバイナリが古いです</string>
-  <string name="notif_outdated_text">suバイナリを更新するにはタップしてください</string>
+  <string name="updater_find_su_failed">現在インストールされているSUコマンドバイナリを見つけることができませんでした。アップデートを続行することはできません</string>
+  <string name="updater_bad_install_location">SUコマンドのバイナリは現在、/sbinにインストールされています。このアップデータでは更新できません。お使いのデバイス用の新しいROMを見つけてください。</string>
+  <string name="notification_text_allow">%sがスーパーユーザー権限を取得しました</string>
+  <string name="notification_text_deny">%sがスーパーユーザー権限の取得に失敗しました</string>
+  <string name="notif_outdated_ticker">お使いのSUバイナリが古いです</string>
+  <string name="notif_outdated_title">SUバイナリが古いです</string>
+  <string name="notif_outdated_text">SUバイナリを更新するにはタップしてください</string>
   <string name="pin_enter_pin">PINを入力してください</string>
   <string name="pin_new_pin">新しいPINを入力してください</string>
   <string name="pin_confirm_pin">PINを確認してください</string>
@@ -168,15 +168,15 @@
   <string name="malicious_apps_uninstall">アンインストール</string>
   <string name="malicious_apps_ignore">無視</string>
   <string name="malicious_app_notification_ticker">悪意のある可能性があるアプリを検出</string>
-  <string name="malicious_app_notification_text">%s はおそらく悪意があります。アンインストールするにはタップしてください</string>
+  <string name="malicious_app_notification_text">%s にはおそらく悪意があります。アンインストールするにはタップしてください</string>
   <string name="malicious_app_uid">UIDをスーパーユーザーと共有する</string>
   <string name="malicious_app_respond">権限要求に対する応答を要求する</string>
   <string name="malicious_app_write">プロバイダへの書き込みする権限を要求する</string>
-  <string name="changelog_full_title">変更履歴</string>
+  <string name="changelog_full_title">更新履歴</string>
   <string name="changelog_title">最新情報</string>
   <plurals name="pref_logs_deleted">
     <item quantity="one">ログを1件削除しました</item>
-    <item quantity="other">％1 $ d件のログを削除しました</item>
+    <item quantity="other">%1$d件のログを削除しました</item>
   </plurals>
   <plurals name="pin_incorrect_try">
     <item quantity="one">最後のチャンス</item>
